@@ -6,12 +6,14 @@
 PLANNED FOR NEXT VERSIONS
 
     o mexpfit() exponentiell fitting.
-    o lsqlin() least-squares solver with linear constraints.
     o bvp4c() general linear differential equations of second order.
 
 CHANGES IN VERSION 1.2.8 (2012-12-01)
 
-    o [tbd.]
+    o polyCurveFit() fits points in n-space with a polynomial curve
+    o lse() least-squares solver with linear equality constraints.
+    o pinv() now works like MASS:ginv() for singular matrices.
+    o toc() added invisible return value.
 
 CHANGES IN VERSION 1.2.7 (2012-11-22)
 
